Bug 243028. Tabbing broken when links have a subtree of nodes rather than just an image or text node. r=bryner, sr=darin