content/events/src/nsEventStateManager.h
@@ -166,6 +166,7 @@ protected:
   nsresult SetClickCount(nsIPresContext* aPresContext, nsMouseEvent *aEvent, nsEventStatus* aStatus);
   nsresult CheckForAndDispatchClick(nsIPresContext* aPresContext, nsMouseEvent *aEvent, nsEventStatus* aStatus);
   PRBool ChangeFocus(nsIContent* aFocus, PRInt32 aFocusedWith);
+  static PRBool HasFocusableAncestor(nsIFrame *aFrame);
   nsresult GetNextTabbableContent(nsIContent* aRootContent,
                                   nsIContent* aStartContent,
                                   nsIFrame* aStartFrame,
